--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 configurations.all {
@@ -31,6 +35,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.material:material:1.4.0'
+    implementation 'com.google.firebase:firebase-common-ktx:20.3.0'
     testImplementation 'junit:junit:4.12'
 
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -50,7 +55,6 @@ dependencies {
     implementation "com.google.android.gms:play-services-auth:18.0.0"
 
 
-    implementation platform('com.google.firebase:firebase-bom:26.1.0')
     implementation 'com.getbase:floatingactionbutton:1.10.1'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
